# Restaurants

./: .gitignore  README.md  pyproject.toml
eda/: get_city.ipynb  get_mcdonalds.ipynb  get_restaurants.ipynb  get_traffic_lights.ipynb  restaurants.ipynb
src/mclights/: coordinate.py  get_data.py
