[project]
name = "restaurants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.1",
]
