[project]
name = "mclights"
version = "0.1.1"
description = "It's a project to explore weird world of polish restaurants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mclights",
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.1",
]

[tool.uv.sources]
mclights = { workspace = true }
